# bibleref

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  main.rs
src/bible/: arrays.rs  errors.rs  lists.rs  mod.rs  validate.rs
src/referencing/: errors.rs  language.rs  mod.rs  parser.rs
tests/: bible_reference_test.rs  casting_tests.rs  edge_case_tests.rs  iteration_tests.rs  mod.rs  parsing_test.rs  parsing_tests.rs  test_plan.md  translation_tests.rs  upcasting_test.rs  validation_tests.rs
