[package]
name = "bibleref"
description = "Structures and functions for managing Bible references"
version = "0.2.1"
edition = "2024"
license = 'MIT'
repository = "https://github.com/reckel-jm/bibleref"
keywords = ["bible", "parsing", "reference", "scripture", "verses"]
authors = ["Jan Martin Reckel <jm.reckel@t-online.de>"]
categories = ["text-processing", "parsing", "bible"]

[dependencies]
once_cell = "1.21.1"
serde = { version = "1.0.215", features = ["derive"] }
